fixed timer json payload

--- a/timer.config
+++ b/timer.config
@@ -1,13 +1,17 @@
 [timer]
+Schedule1Enabled=True
 days1=1,2,3,4
 start1=10:00
-stop1=
+stop1=11:00
+Schedule1Enabled=True
 days2=1,2,3,4
 start2=10:00
 stop2=12:00
+Schedule1Enabled=True
 days3=1,2,3,4
 start3=14:00
 stop3=16:00
+Schedule1Enabled=True
 days4=1,2,3,4
 start4=18:00
 stop4=20:00
