fixed timer config

--- a/timer.config
+++ b/timer.config
@@ -1,17 +1,18 @@
 [timer]
-Schedule1Enabled=True
-days1=0,2,3,4
-start1=16:10
-stop1=16:11
-Schedule2Enabled=True
-days2=1,2,3,4
-start2=10:00
-stop2=12:00
-Schedule3Enabled=True
-days3=1,2,3,4
-start3=14:00
-stop3=16:00
-Schedule4Enabled=True
-days4=1,2,3,4
-start4=18:00
-stop4=20:00
+schedule1enabled = True
+days1 = 0,2,4
+start1 = 16:30
+stop1 = 17:00
+schedule2enabled = True
+days2 = 1,2,3,4
+start2 = 10:00
+stop2 = 12:00
+schedule3enabled = True
+days3 = 1,2,3,4
+start3 = 14:00
+stop3 = 16:00
+schedule4enabled = True
+days4 = 1,2,3,4
+start4 = 18:00
+stop4 = 20:00
+
